# Time-Series-Library

./: .gitignore  hello.py  pyproject.toml  run_nr.py
data_provider/: data_loader.py
nr/: TimesNet_M4.sh  ft.ipynb  fusion_trans_notebook.py  prototype.py  regression.ipynb  regression.py
utils/: tools.py
