[project]
name = "time-series-library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.6",
    "marimo>=0.11.20",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pytorch-forecasting>=1.3.0",
    "pytorch-optimizer>=3.4.2",
    "tensorboardx>=2.6.2.2",
    "torch>=2.6.0",
]
